# stockbot

./: .gitignore  README.md  pyproject.toml
src/stockbot/: cache.py  cli.py  fetch.py  finviz_source.py  screen.py  universe.py
tests/: test_screen.py
