[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockbot"
version = "0.1.0"
description = "Simple CLI stock screener backed by yfinance."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "rich>=13.0",
    "click>=8.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
stockbot = "stockbot.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
